--- a/public/robot.html
+++ b/public/robot.html
@@ -13,17 +13,16 @@
   <script src="/socket.io/socket.io.js" defer></script>
   <script src="toast.js" defer></script>
   <script src="core.js" defer></script>
-  <script src="client.js" defer></script>
+  <script src="robot.js" defer></script>
 
-  <title>Robot car - client side</title>
+  <title>Robot car - robot side</title>
 
 </head>
 <body>
   
-  Pozdrav svijete
-
   <div>
-    <button id="connectBtn">Poveži</button>
+    <button id="connectBtn">Connect</button>
+    <button>Start stream</button>
   </div>
 
   <div id="toast"></div>
