--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,14 @@
 </head>
 <body>
   
-  Pozdrav svijete
-
   <div>
-    <button id="connectBtn">Poveži</button>
+
+    <video id="robotVideo" autoplay controls></video>
+    <video id="clientVideo" autoplay controls></video>
+
+    <button id="connectBtn">Connect</button>
+    <button id="streamBtn">Start stream</button>
+
   </div>
 
   <div id="toast"></div>
