--- a/public/robot.html
+++ b/public/robot.html
@@ -21,8 +21,13 @@
 <body>
   
   <div>
+
+    <video id="robotVideo" autoplay controls></video>
+    <video id="clientVideo" autoplay controls></video>
+
     <button id="connectBtn">Connect</button>
-    <button>Start stream</button>
+    <button id="streamBtn">Start stream</button>
+
   </div>
 
   <div id="toast"></div>
