--- a/public/robot.html
+++ b/public/robot.html
@@ -12,6 +12,7 @@
   <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
   <script src="/socket.io/socket.io.js" defer></script>
   <script src="toast.js" defer></script>
+  <script src="ble.js" defer></script>
   <script src="core.js" defer></script>
   <script src="robot.js" defer></script>
 
@@ -22,8 +23,8 @@
   
   <div>
 
-    <video id="robotVideo" autoplay controls></video>
-    <video id="clientVideo" autoplay controls></video>
+    <video id="robotVideo" autoplay muted></video>
+    <video id="clientVideo" autoplay hidden></video>
 
     <button id="connectBtn">Connect</button>
     <button id="streamBtn">Start stream</button>
